# allproject

soteria-backend-main/: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  manage.py  pm2-ecosystem.config.js  pyproject.toml  requirements-dev.txt  requirements.txt
soteria-backend-main/scripts/: _ensure.sh  django_setup.py  sync-requirements.bat  sync-requirements.sh
soteria-backend-main/scripts/app/: setup_app.sh  setup_system.sh
soteria-backend-main/scripts/pm2/: run_api.sh  run_celery.sh  run_celerybeat.sh
soteria-backend-main/src/soteria/: apps.py  celery.py  exception.py  permissions.py  sync_permission.py
soteria-backend-main/src/soteria/admin/: __init__.py
soteria-backend-main/src/soteria/api/: fields.py  file_upload.py  handler.py  pagination.py  utils.py  views.py
soteria-backend-main/src/soteria/atms/: apps.py  customform.py  tasks.py  urls.py
soteria-backend-main/src/soteria/auth/: urls.py
soteria-backend-main/src/soteria/conf/: asgi.py  settings.py  urls.py  wsgi.py
soteria-backend-main/src/soteria/core/: notification.py
soteria-backend-main/src/soteria/middleware/: current_user.py  organization.py
soteria-backend-main/src/soteria/migrations/: 0001_initial.py  0002_invitationcode.py  0002_user_can_create_org.py  0003_merge_0002_invitationcode_0002_user_can_create_org.py  0004_tenantmodelmixin_tenant_domain.py  0004_user_last_password_change_at_resetpasswordticket.py  0005_merge_20220725_1151.py  0006_organization_alter_domain_tenant_delete_tenant.py  0007_alter_resetpasswordticket_client_ua_and_more.py  (+4 more)
(+387 files in other folders)
